; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashpage.c__hash_getinitbuf.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/hash/extr_hashpage.c__hash_getinitbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@P_NEW = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"hash AM does not use P_NEW\00", align 1
@MAIN_FORKNUM = common dso_local global i32 0, align 4
@RBM_ZERO_AND_LOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_hash_getinitbuf(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @P_NEW, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @ERROR, align 4
  %11 = call i32 @elog(i32 %10, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9, %2
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @MAIN_FORKNUM, align 4
  %15 = load i64, i64* %4, align 8
  %16 = load i32, i32* @RBM_ZERO_AND_LOCK, align 4
  %17 = call i32 @ReadBufferExtended(i32 %13, i32 %14, i64 %15, i32 %16, i32* null)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @BufferGetPage(i32 %18)
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @BufferGetPageSize(i32 %20)
  %22 = call i32 @_hash_pageinit(i32 %19, i32 %21)
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @ReadBufferExtended(i32, i32, i64, i32, i32*) #1

declare dso_local i32 @_hash_pageinit(i32, i32) #1

declare dso_local i32 @BufferGetPage(i32) #1

declare dso_local i32 @BufferGetPageSize(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
